--- a/css/styles.css
+++ b/css/styles.css
@@ -5,25 +5,69 @@ hr {
 }
 
 body {
-  color: black;
+  color: #444444;
   background-color: #EDEDED;
   font-family: 'Merriweather', serif;
 }
 
 h1 {
-  color: black;
+
   font-family: 'Cormorant Garamond', serif;
 }
 
-li {
-  padding-right: 20px;
-}
 
 p {
   display: inline-block;
+
+}
+
+td{
+  padding-right: 30px;
 }
 
 .intro {
   position: relative;
   bottom: 10px;
+}
+.top-container{
+  background-color: #444444;
+  color:#EDEDED;
+}
+.middle-container{
+  text-align: center;
+
+}
+.bottom-container{
+background-color: #444444;
+  color:#EDEDED;
+
+}
+.center{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.center-text{
+text-align:center;
+}
+
+
+/* unvisited link */
+a:link {
+  color: #DA0037;
+}
+
+/* visited link */
+a:visited {
+  color: #DA0037;
+}
+
+/* mouse over link */
+a:hover {
+  color: hotpink;
+}
+
+/* selected link */
+a:active {
+  color: blue;
 }
